mudanças header, hidden

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -31,7 +31,7 @@
           <div class="menu-mobile">
             <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
             <div class="menu-mobile-links">
-              <img id="" src="./assets/images/logo_original.png" alt="movEasy">
+              <img id="logo-mobile" src="./assets/images/logo_original.png" alt="movEasy">
               <a href="./index.html">HOME</a>
               <a href="./agendar.html">AGENDAR</a>
               <a href="./sobre.html">SOBRE</a>
