Mudanças no login-usuario

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -52,8 +52,8 @@
     </div>
     <div class="banner2">
         <form action="">
-            <div class="">
-                <div class="menu-login">
+            <div class="corpo">
+                <div class="menu-login w[480px] h[420px]">
                     <div class="controlador-login">
                         <div class="">
                             <label for="login-email"
@@ -80,14 +80,13 @@
                             <span class="text-sm text-blue-800 font-bold" placeholder="Manter conectado">Manter
                                 conectado?</span>
 
-
-                            <div class="recuperar-senha">
-                                <button class="recuperar-senha text-black text-lg py-4 font-normal font-['Inter']">
+                            <div>
+                                <button class="recuperar-senha text-black text-lg font-normal font-['Inter']">
                                     Esqueceu a senha?</button>
                             </div>
                         </div>
                     </div>
-                    <div class="texto-cadastro text-black text-lg font-normal font-['Inter']">Nao possui cadastro?</div>
+                    <div class="texto-cadastro text-black text-lg font-normal pr-5 font-['Inter']">Nao possui cadastro?</div>
                     <div>
                         <button type="submit" id="btn-cadastrar"
                             class="rounded-[10px] font-bold text-lg shadow">Cadastrar</button>
