Adaptação de responsividade

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -53,23 +53,23 @@
     <div class="banner2">
         <form action="">
             <div class="corpo">
-                <div class="menu-login w[480px] h[420px]">
+                <div class="menu-login">
                     <div class="controlador-login">
                         <div class="">
                             <label for="login-email"
                                 class="text-black text-lg font-normal font-['Inter']"><strong>Email:</strong></label>
-                            <input type="email" class="w-[320px] h-[35px] bg-zinc-300 rounded-[10px]"
+                            <input type="email" class="bg-zinc-300 rounded-[10px]"
                                 placeholder="Digite o seu email"></input>
                         </div>
                         <div>
                             <label for="login-senha"
                                 class="text-black text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
-                            <input type="password" class="w-[320px] h-[35px] bg-zinc-300 rounded-[10px]"
+                            <input type="password" class="bg-zinc-300 rounded-[10px]"
                                 placeholder="Digite a sua senha"></input>
                         </div>
                     </div>
 
-                    <div>
+                    <div class="botao-logar">
                         <button type="submit" id="btn-logar"
                             class="rounded-[10px] font-bold text-lg shadow">Login</button>
                     </div>
