Remoção do agendar

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -33,20 +33,18 @@
             <div class="menu-mobile-links">
               <img id="logo-mobile" src="./assets/images/logo_original.png" alt="movEasy">
               <a href="./index.html">HOME</a>
-              <a href="./agendar.html">AGENDAR</a>
               <a href="./sobre.html">SOBRE</a>
               <a href="./faq.html">FAQ</a>
-              <a href="./suporte.html" class="active">SUPORTE</a>
-              <a href="./login.html">LOGIN</a>
+              <a href="./suporte.html">SUPORTE</a>
+              <a href="./login.html" class="active">LOGIN</a>
             </div>
           </div>
           <div class="menu-desktop">
             <a href="./index.html">HOME</a>
-            <a href="./agendar.html">AGENDAR</a>
             <a href="./sobre.html">SOBRE</a>
             <a href="./faq.html">FAQ</a>
-            <a href="./suporte.html" class="active">SUPORTE</a>
-            <a href="./login.html">LOGIN</a>
+            <a href="./suporte.html">SUPORTE</a>
+            <a href="./login.html" class="active">LOGIN</a>
           </div>
         </header>
     </div>
