retirado modal login-usuario

--- a/Web/sobre.html
+++ b/Web/sobre.html
@@ -44,7 +44,7 @@
                     <a href="./sobre.html" class="active">SOBRE</a>
                     <a href="./faq.html">FAQ</a>
                     <a href="./suporte.html">SUPORTE</a>
-                    <a href="./login.html">LOGIN</a>
+                    <a href="./Login-usuario.html">LOGIN</a>
                 </div>
             </div>
             <div class="menu-desktop">
@@ -52,7 +52,7 @@
                 <a href="./sobre.html" class="active">SOBRE</a>
                 <a href="./faq.html">FAQ</a>
                 <a href="./suporte.html">SUPORTE</a>
-                <a href="./login.html">LOGIN</a>
+                <a href="./Login-usuario.html">LOGIN</a>
             </div>
         </header>
         <div class="mx-8">
