--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -1,101 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>MovEasy</title>
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/Login-usuario.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/saved_resource"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              clifford: '#da373d',
-            }
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>MovEasy</title>
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/Login-usuario.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./js/saved_resource"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
           }
         }
       }
-    </script>
-  </head>
+    }
+  </script>
+</head>
+
 <body>
 
-    <div class="banner">
-        <header id="header" class="flex justify-between	pr-32 pt-8">
-          <div>
-            <img id="logo" src="assets/images/logo.png" alt="movEasy">
-          </div>
-          <div class="menu-mobile">
-            <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
-            <div class="menu-mobile-links">
-              <img id="logo-mobile" src="./assets/images/logo_original.png" alt="movEasy">
+  <div class="banner">
+    <header id="header" class="flex justify-between	px-16 pt-8">
+      <div>
+          <img id="logo" src="assets/images/logo.png" alt="movEasy">
+      </div>
+      <div class="menu-mobile">
+          <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+          <div class="menu-mobile-links">
+              <img id="" src="./assets/images/logo_original.png" alt="movEasy">
               <a href="./index.html">HOME</a>
-              <a href="./sobre.html">SOBRE</a>
+              <a href="./sobre.html" >SOBRE</a>
               <a href="./faq.html">FAQ</a>
               <a href="./suporte.html">SUPORTE</a>
-              <a href="./login.html" class="active">LOGIN</a>
-            </div>
+              <a href="./Login-usuario.html"class="active">LOGIN</a>
           </div>
-          <div class="menu-desktop">
-            <a href="./index.html">HOME</a>
-            <a href="./sobre.html">SOBRE</a>
-            <a href="./faq.html">FAQ</a>
-            <a href="./suporte.html">SUPORTE</a>
-            <a href="./login.html" class="active">LOGIN</a>
-          </div>
-        </header>
-    </div>
+      </div>
+      <div class="menu-desktop">
+          <a href="./index.html">HOME</a>
+          <a href="./sobre.html" >SOBRE</a>
+          <a href="./faq.html">FAQ</a>
+          <a href="./suporte.html">SUPORTE</a>
+          <a href="./Login-usuario.html" class="active">LOGIN</a>
+      </div>
+  </header>
     <div class="banner2">
-        <form action="">
-            <div class="corpo">
-                <div class="menu-login">
-                    <div class="controlador-login">
-                        <div class="">
-                            <label for="login-email"
-                                class="text-black text-lg font-normal font-['Inter']"><strong>Email:</strong></label>
-                            <input type="email" class="bg-zinc-300 rounded-[10px]"
-                                placeholder="Digite o seu email"></input>
-                        </div>
-                        <div>
-                            <label for="login-senha"
-                                class="text-black text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
-                            <input type="password" class="bg-zinc-300 rounded-[10px]"
-                                placeholder="Digite a sua senha"></input>
-                        </div>
-                    </div>
-
-                    <div class="botao-logar">
-                        <button type="submit" id="btn-logar"
-                            class="rounded-[10px] font-bold text-lg shadow">Login</button>
-                    </div>
-
-                    <div class="">
-                        <div class="campos flex mt-4">
-                            <input type="checkbox" class="bg-zinc-300"></input>
-                            <span class="text-sm text-blue-800 font-bold" placeholder="Manter conectado">Manter
-                                conectado?</span>
-
-                            <div>
-                                <button class="recuperar-senha text-black text-lg font-normal font-['Inter']">
-                                    Esqueceu a senha?</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="texto-cadastro text-black text-lg font-normal pr-5 font-['Inter']">Nao possui cadastro?</div>
-                    <div>
-                        <button type="submit" id="btn-cadastrar"
-                            class="rounded-[10px] font-bold text-lg shadow">Cadastrar</button>
-                    </div>
-
-                </div>
+      <form action="">
+        <div class="corpo">
+          <div class="menu-login">
+            <div class="controlador-login">
+              <div class="">
+                <label for="login-email"
+                  class="text-black text-lg font-normal font-['Inter']"><strong>Email:</strong></label>
+                <input type="email" class="bg-zinc-300 rounded-[10px]" placeholder="Digite o seu email"></input>
+              </div>
+              <div>
+                <label for="login-senha"
+                  class="text-black text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
+                <input type="password" class="bg-zinc-300 rounded-[10px]" placeholder="Digite a sua senha"></input>
+              </div>
             </div>
 
+            <div class="botao-logar">
+              <button type="submit" id="btn-logar" class="rounded-[10px] font-bold text-lg shadow">Login</button>
+            </div>
+
+            <div class="">
+              <div class="campos flex mt-4">
+                <input type="checkbox" class="bg-zinc-300"></input>
+                <span class="text-sm text-blue-800 font-bold" placeholder="Manter conectado">Manter
+                  conectado?</span>
+
+                <div>
+                  <button class="recuperar-senha text-black text-lg font-normal font-['Inter']">
+                    Esqueceu a senha?</button>
+                </div>
+              </div>
+            </div>
+            <div class="texto-cadastro text-black text-lg font-normal font-['Inter']">Nao possui cadastro?</div>
+            <div>
+              <button type="submit" id="btn-cadastrar"
+                class="rounded-[10px] font-bold text-lg shadow">Cadastrar</button>
+            </div>
+
+          </div>
+
+        </div>
     </div>
-    </form>
-    </div>
+  </div>
+
+  </form>
+  </div>
 </body>
 
 </html>
