--- a/Web/suporte.html
+++ b/Web/suporte.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/suporte.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/saved_resource"></script>
+  <SCript src="./js/suporte.js"></SCript>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script>
     tailwind.config = {
@@ -83,8 +84,7 @@
             <div class="button-container">
               <div class="button-box" id="button-voltar">
                 <button type="button"
-                  onclick="continuar_suporte('box-continuar-suporte'); voltar_suporte('box-finalizar-suporte');">
-                  <</button>
+                  onclick="continuar_suporte('box-continuar-suporte'); voltar_suporte('box-finalizar-suporte');"><</button>
               </div>
               <div class="button-box" id="button-enviar">
                 <button type="button" onclick="enviar();">Enviar</button>
