Atualizado atalho da página home

--- a/Web/index.html
+++ b/Web/index.html
@@ -36,7 +36,7 @@
           <a href="./sobre.html">SOBRE</a>
           <a href="./faq.html">FAQ</a>
           <a href="./suporte.html">SUPORTE</a>
-          <a href="./login.html">LOGIN</a>
+          <a href="./Login-usuario.html">LOGIN</a>
         </div>
       </div>
       <div class="menu-desktop">
@@ -44,7 +44,7 @@
         <a href="./sobre.html">SOBRE</a>
         <a href="./faq.html">FAQ</a>
         <a href="./suporte.html">SUPORTE</a>
-        <a href="./login.html">LOGIN</a>
+        <a href="./Login-usuario.html">LOGIN</a>
       </div>
     </header>
     <div class="principal mx-28 my-14 text-4xl">
