corrigido menu do suporte e botão de cadastro do login

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -83,7 +83,7 @@
             </div>
             <div class="texto-cadastro text-black text-lg font-normal font-['Inter']">Nao possui cadastro?</div>
             <div>
-              <button type="submit" id="btn-cadastrar"
+              <button type="button" id="btn-cadastrar" onclick="window.location.href='./cadastro.html';"
                 class="rounded-[10px] font-bold text-lg shadow">Cadastrar</button>
             </div>
 
