--- a/Web/suporte.html
+++ b/Web/suporte.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="./css/suporte.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/saved_resource"></script>
-  <SCript src="./js/suporte.js"></SCript>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <SCript src="./js/suporte.js"></SCript>
   <script>
     tailwind.config = {
       theme: {
@@ -36,8 +36,8 @@
           <a href="./index.html">HOME</a>
           <a href="./sobre.html">SOBRE</a>
           <a href="./faq.html">FAQ</a>
-          <a href="./suporte.html">SUPORTE</a>
-          <a href="./login.html" class="active">LOGIN</a>
+          <a href="./suporte.html" class="active">SUPORTE</a>
+          <a href="./login.html" >LOGIN</a>
         </div>
       </div>
       <div class="menu-desktop">
@@ -45,7 +45,7 @@
         <a href="./sobre.html">SOBRE</a>
         <a href="./faq.html">FAQ</a>
         <a href="./suporte.html">SUPORTE</a>
-        <a href="./login.html" class="active">LOGIN</a>
+        <a href="./Login-usuario.html" class="active">LOGIN</a>
       </div>
     </header>
 
