id's alterados para atender ao .js

--- a/Web/index.html
+++ b/Web/index.html
@@ -57,7 +57,7 @@
           <div>
           <label for="">Qual a origem da mudança?</label>
           <div class="mudanca-form">
-            <select class="uf-estado" name="estado-id">
+            <select id="origem_estado" class="uf-estado" name="estado-id">
               <option value="">UF</option>
               <option value="1">AC</option>
               <option value="2">AL</option>
@@ -93,7 +93,7 @@
         <div>
           <label for="">Qual o destino da mudança?</label>
           <div class="mudanca-form">
-            <select class="uf-estado" name="estado-id">
+            <select id="destino_estado" class="uf-estado" name="estado-id">
               <option value="">UF</option>
               <option value="1">AC</option>
               <option value="2">AL</option>
