--- a/Web/suporte.html
+++ b/Web/suporte.html
@@ -58,10 +58,10 @@
 
           <div class="info-boxes-suporte">
             <label for="formulario-suporte-nome">Nome:</label>
-            <input type="text" placeholder="Digite seu nome"></input>
+            <input type="text" placeholder="Digite seu nome" id="Nome"></input>
 
             <label for="formulario-suporte-email">E-mail:</label>
-            <input type="email" placeholder="ex: seuemail@emai.com"></input>
+            <input type="email" placeholder="ex: seuemail@emai.com" id="Email"></input>
 
             <div class="button-box" id="button-continuar">
               <button type="button">Continuar</button>
@@ -73,12 +73,12 @@
 
           <div class="info-boxes-suporte">
             <label for="formulario-suporte-assunto">Assunto:</label>
-            <input type="text" placeholder="Digite o assunto do seu problema"></input>
+            <input type="text" placeholder="Digite o assunto do seu problema" id="Assunto"></input>
           </div>
 
           <div class="info-boxes-suporte" id="descricao-suporte">
             <label for="formulario-suporte-descricao">Descrição:</label>
-            <input type="text" placeholder="Digite aqui a descrição do seu problema"></input>
+            <input type="text" placeholder="Digite aqui a descrição do seu problema" id="Descricao"></input>
           </div>
 
           <div class="button-container">
@@ -86,7 +86,7 @@
               <button type="button"><</button>
             </div>
             <div class="button-box" id="button-enviar">
-              <button type="button">Enviar</button>
+              <button type="button" id="Enviar">Enviar</button>
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
     </div>
 
   </div>
-  <script src="./js/suporte.js"></script>
+
 </body>
 
 </html>
